# hash-mining

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.example.toml  deploy.sh
cuda/: kernel.cu  miner.h
src/: chain.rs  config.rs  coordinator.rs  cpu.rs  cuda.rs  globals.rs  main.rs  metrics.rs  submit.rs  types.rs  wallet.rs
