[package]
name = "hash-miner"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[features]
default = ["cuda"]
cuda = []

[dependencies]
alloy = { version = "2.0", features = [
    "provider-ws",
    "provider-http",
    "providers",
    "contract",
    "sol-types",
    "signer-local",
    "rpc-types-eth",
    "reqwest",
    "eips",
    "node-bindings",
    "rlp",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
async-trait = "0.1"

keccak-asm = "0.1"
tiny-keccak = { version = "2", features = ["keccak"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
parking_lot = "0.12"
num_cpus = "1"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bin]]
name = "hash-miner"
path = "src/main.rs"

[build-dependencies]
cc = "1"
